refactor: Update footer links to be education-focused
Previous footer had generic corporate links (Security & Brand, Website, etc.)
Updated to be more appropriate for an educational institution:

Footer Section 1 - Admissions:
- Apply Now
- Admission Requirements
- Tuition & Financial Aid

Footer Section 2 - About BDS:
- Academic Calendar (linked to academic-calendar.html)
- Our Philosophy
- Campus Life

Footer Section 3 - Contact:
- Contact Us
- Visit Campus
- Career Opportunities

Changes:
- Removed: Security & Brand section (Report Copyright, Security Issues, Trademark)
- Removed: Website section (Accessibility, Digital Accessibility, Privacy)
- Removed: Generic 'Get In Touch' section
- Added: Education-relevant sections focusing on admissions, school info, and contact
- Linked Academic Calendar to the dedicated page
- More appropriate for international school audience
- Aligns with educational institution best practices

--- a/index.html
+++ b/index.html
@@ -1836,27 +1836,27 @@
     <div class="footer-container">
       <div class="footer-grid">
         <div class="footer-section">
-          <h3>Security & Brand</h3>
+          <h3>Admissions</h3>
           <ul class="footer-links">
-            <li><a href="#">Report Copyright Infringement</a></li>
-            <li><a href="#">Report Security Issue</a></li>
-            <li><a href="#">Trademark Notice</a></li>
+            <li><a href="#">Apply Now</a></li>
+            <li><a href="#">Admission Requirements</a></li>
+            <li><a href="#">Tuition & Financial Aid</a></li>
           </ul>
         </div>
         <div class="footer-section">
-          <h3>Website</h3>
+          <h3>About BDS</h3>
           <ul class="footer-links">
-            <li><a href="#">Accessibility</a></li>
-            <li><a href="#">Digital Accessibility</a></li>
-            <li><a href="#">Privacy statement</a></li>
+            <li><a href="academic-calendar.html">Academic Calendar</a></li>
+            <li><a href="#">Our Philosophy</a></li>
+            <li><a href="#">Campus Life</a></li>
           </ul>
         </div>
         <div class="footer-section">
-          <h3>Get In Touch</h3>
+          <h3>Contact</h3>
           <ul class="footer-links">
-            <li><a href="#">Contact BDS</a></li>
-            <li><a href="#">Maps & Directions</a></li>
-            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Visit Campus</a></li>
+            <li><a href="#">Career Opportunities</a></li>
           </ul>
         </div>
       </div>
